mobile menu fix

--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -21,6 +21,10 @@
                 <a href="/pricing/index.html" id="nav-pricing">Pricing</a>
                 <a href="/support/index.html" id="nav-support">Support</a>
                 <a href="/blog/blog.php" id="nav-blog">Blog</a>
+                <a href="/download.php" class="mobile-download-btn">
+                    <i class="fa-solid fa-download"></i>
+                    Download Selenix
+                </a>
             </div>
             <a href="/download.php" class="cta-button">
                 <i class="fa-solid fa-download"></i>
