create template scroll to

--- a/product/templates/index.html
+++ b/product/templates/index.html
@@ -197,7 +197,7 @@
                         <li><i class="fa-solid fa-check"></i> Help others automate their tasks</li>
                         <li><i class="fa-solid fa-check"></i> Showcase your automation skills</li>
                     </ul>
-                    <a href="../../docs/index.html#create-templates" class="primary-button">
+                    <a href="../../docs/index.html?scrollTo=creating-templates#templates" class="primary-button">
                         <i class="fa-solid fa-upload"></i>
                         Learn How to Create Templates
                     </a>
