download button fixed on templates

--- a/product/templates/index.html
+++ b/product/templates/index.html
@@ -269,7 +269,7 @@
                 <h2>Ready to Automate with Selenix?</h2>
                 <p>Download Selenix today and access all these templates to start saving time immediately.</p>
                 <div class="cta-buttons">
-                    <a href="#" class="primary-button">
+                    <a href="../../download.php" class="primary-button">
                         <i class="fa-solid fa-download"></i>
                         Download Selenix
                     </a>
