--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -15,13 +15,13 @@
             <div class="footer-column">
                 <h3>Product</h3>
                 <ul>
-                    <li><a href="#" id="footer-docs"><i class="fa-solid fa-file-lines"></i> Documentation</a></li>
-                    <li><a href="#" id="footer-no-code-builder"><i class="fa-solid fa-cubes"></i> No-code builder</a></li>
-                    <li><a href="#" id="footer-no-code-steps"><i class="fa-solid fa-list-check"></i> No-code steps</a></li>
-                    <li><a href="#pricing"><i class="fa-solid fa-tag"></i> Pricing</a></li>
+                    <li><a href="/docs/" id="footer-docs"><i class="fa-solid fa-file-lines"></i> Documentation</a></li>
+                    <li><a href="/docs/#command-reference" id="footer-no-code-builder"><i class="fa-solid fa-cubes"></i> Commands Reference</a></li>
+                    <li><a href="/docs/index.html?scrollTo=creating-templates#templates" id="footer-no-code-steps"><i class="fa-solid fa-list-check"></i> Create Templates</a></li>
+                    <li><a href="/product/templates/"><i class="fa-solid fa-tag"></i> Pre-built Templates</a></li>
                 </ul>
             </div>
-            <div class="footer-column">
+            <!-- <div class="footer-column">
                 <h3>Web automation</h3>
                 <ul>
                     <li><a href="#"><i class="fa-solid fa-robot"></i> Automate website actions</a></li>
@@ -29,14 +29,14 @@
                     <li><a href="#"><i class="fa-solid fa-pen-to-square"></i> Automate Form Filling</a></li>
                     <li><a href="#" id="footer-templates"><i class="fa-solid fa-puzzle-piece"></i> Automation templates</a></li>
                 </ul>
-            </div>
+            </div> -->
             <div class="footer-column">
                 <h3>Blog</h3>
                 <ul>
-                    <li><a href="#"><i class="fa-solid fa-bug"></i> Debugging automations</a></li>
-                    <li><a href="#"><i class="fa-solid fa-plug"></i> Integration guides</a></li>
-                    <li><a href="#"><i class="fa-solid fa-brain"></i> ChatGPT web scraping</a></li>
-                    <li><a href="#"><i class="fa-solid fa-lightbulb"></i> Browser automation tips</a></li>
+                    <li><a href="blog/post.php?slug=the-complete-beginner-s-guide-to-web-scraping-with-selenix"><i class="fa-solid fa-bug"></i> Beginner's Guide to Scraping</a></li>
+                    <li><a href="/blog/post.php?slug=automating-web-data-collection-with-selenix-and-using-it-in-n8n-workflows"><i class="fa-solid fa-plug"></i> Selenix & N8N</a></li>
+                    <li><a href="/blog/post.php?slug=localhost-web-scraping-with-no-code-tool-selenix"><i class="fa-solid fa-brain"></i> Localhost AI Assisted Web Scraping</a></li>
+                    <!-- <li><a href="#"><i class="fa-solid fa-lightbulb"></i> Browser automation tips</a></li> -->
                 </ul>
             </div>
         </div>
