--- a/product/templates/index.html
+++ b/product/templates/index.html
@@ -257,7 +257,7 @@
                     </a>
                 </div>
                 <div class="create-share-image">
-                    <img src="https://via.placeholder.com/500x350" alt="Create and Share Templates">
+                    <img src="../../uploads/templates/img/createtemplate.png" alt="Create and Share Templates">
                 </div>
             </div>
         </div>
