--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -33,7 +33,7 @@
             <div class="footer-column">
                 <h3>Blog</h3>
                 <ul>
-                    <li><a href="blog/post.php?slug=the-complete-beginner-s-guide-to-web-scraping-with-selenix"><i class="fa-solid fa-bug"></i> Beginner's Guide to Scraping</a></li>
+                    <li><a href="/blog/post.php?slug=the-complete-beginner-s-guide-to-web-scraping-with-selenix"><i class="fa-solid fa-bug"></i> Beginner's Guide to Scraping</a></li>
                     <li><a href="/blog/post.php?slug=automating-web-data-collection-with-selenix-and-using-it-in-n8n-workflows"><i class="fa-solid fa-plug"></i> Selenix & N8N</a></li>
                     <li><a href="/blog/post.php?slug=localhost-web-scraping-with-no-code-tool-selenix"><i class="fa-solid fa-brain"></i> Localhost AI Assisted Web Scraping</a></li>
                     <!-- <li><a href="#"><i class="fa-solid fa-lightbulb"></i> Browser automation tips</a></li> -->
