--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -16,6 +16,10 @@
                 <h3>Product</h3>
                 <ul>
                     <li><a href="/docs/" id="footer-docs"><i class="fa-solid fa-file-lines"></i> Documentation</a></li>
+                             <a href="/product/professional-services/" id="footer-professional-services">
+                            <i class="fa-solid fa-handshake-angle"></i>
+                            Professional Services
+                        </a>
                     <li><a href="/docs/#command-reference" id="footer-no-code-builder"><i class="fa-solid fa-cubes"></i> Commands Reference</a></li>
                     <li><a href="/docs/index.html?scrollTo=creating-templates#templates" id="footer-no-code-steps"><i class="fa-solid fa-list-check"></i> Create Templates</a></li>
                     <li><a href="/product/templates/"><i class="fa-solid fa-tag"></i> Pre-built Templates</a></li>
