--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -6,20 +6,24 @@
                 <span class="logo-text">selenix<span class="logo-dot">.</span>io</span>
             </a>
             <div class="nav-links">
-                <a href="/docs/index.html" id="nav-docs">Docs</a>
+                <a href="/docs/" id="nav-docs">Docs</a>
                 <div class="dropdown">
                     <a href="#" class="dropdown-toggle" id="nav-product">Product <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-menu">
-                        <!-- <a href="/product/no-code-builder/index.html" id="nav-no-code-builder">No-code builder</a>
-                        <a href="/product/no-code-steps/index.html" id="nav-no-code-steps">No-code steps</a>
-                        <a href="/product/bot-runner/index.html" id="nav-bot-runner">Bot runner</a> -->
-                        <a href="/product/templates/index.html" id="nav-templates">Templates</a>
-                        <a href="/product/video-guides/index.html" id="nav-video-guides">Video guides</a>
-                        <a href="/product/release-notes/index.html" id="nav-release-notes">Release notes</a>
+                        <!-- <a href="/product/no-code-builder/" id="nav-no-code-builder">No-code builder</a>
+                        <a href="/product/no-code-steps/" id="nav-no-code-steps">No-code steps</a>
+                        <a href="/product/bot-runner/" id="nav-bot-runner">Bot runner</a> -->
+                        <a href="/product/templates/" id="nav-templates">Templates</a>
+                        <a href="/product/professional-services/" id="nav-professional-services">
+                            <i class="fa-solid fa-star"></i>
+                            Professional Services
+                        </a>
+                        <a href="https://www.youtube.com/@MarkITSRL" target="_blank" class="support-link">Video guides</a>
+                        <a href="/product/release-notes/" id="nav-release-notes">Release notes</a>
                     </div>
                 </div>
-                <a href="/pricing/index.html" id="nav-pricing">Pricing</a>
-                <a href="/support/index.html" id="nav-support">Support</a>
+                <a href="/pricing/" id="nav-pricing">Pricing</a>
+                <a href="/support/" id="nav-support">Support</a>
                 <a href="/blog/blog.php" id="nav-blog">Blog</a>
                 <a href="/download.php" class="mobile-download-btn">
                     <i class="fa-solid fa-download"></i>
